# tessa-cli

./: .gitignore  CLAUDE.md  LICENSE  NOTES.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-07-17-automations-engine.md  2026-07-18-voice-capabilities.md
docs/superpowers/specs/: 2026-07-17-voice-mode-design.md
server/: README.md  pyproject.toml
server/tessa_server/: main.py
server/tessa_server/api/: __init__.py  v1.py
server/tessa_server/auth/: __init__.py  bearer.py
server/tessa_server/config/: __init__.py  settings.py
server/tessa_server/models/: chat.py
server/tessa_server/services/: __init__.py  ollama_provider.py
server/tests/: conftest.py  test_auth.py  test_v1.py
src/lydia/agent/: prompts.py  tools.py
src/lydia/automations/: __init__.py  model.py  parser.py  runner.py  store.py
src/lydia/cli/: briefing.py  chat.py  main.py  scheduler.py  ui.py
src/lydia/config/: secrets.py  settings.py
src/lydia/connectors/: __init__.py  calendar_mac.py  canvas.py  email_gmail.py  email_outlook.py  news.py  stocks.py  weather.py
src/lydia/connectors/auth/: gmail_oauth.py  outlook_oauth.py
src/lydia/llm/: client.py  models.py
src/lydia/tools/: filesystem.py  terminal.py
src/lydia/voice/: __init__.py  assistant.py  audio.py  stt.py  tts.py  wake.py
src/tessa/agent/: __init__.py  loop.py  prompts.py  tools.py
src/tessa/cli/: chat.py  main.py  ui.py
src/tessa/config/: settings.py
src/tessa/context/: __init__.py  indexer.py  retriever.py
src/tessa/database/: sqlite.py
src/tessa/llm/: __init__.py  client.py  factory.py  protocol.py  remote_client.py  types.py
src/tessa/tools/: filesystem.py  git.py  paths.py  terminal.py
tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_agent_tools_assistant.py  test_automations_model.py  test_automations_parser.py  test_automations_runner.py  test_automations_store.py  test_cli_auth.py  test_cli_briefing.py  test_cli_chat_mode.py  test_cli_commands.py  test_cli_schedule.py  test_cli_voice.py  test_client.py  test_config.py  test_connectors_calendar.py  test_connectors_canvas.py  test_connectors_email_gmail.py  test_connectors_email_outlook.py  test_connectors_news.py  test_connectors_stocks.py  test_connectors_weather.py  test_database_sqlite.py  test_factory.py  test_filesystem_tools.py  test_git_tools.py  test_gmail_oauth.py  test_indexer.py  test_models.py  test_outlook_oauth.py  test_paths.py  test_prompts.py  test_protocol.py  test_remote_client.py  test_resolve_model.py  test_retriever.py  test_scheduler.py  test_secrets.py  test_terminal_tool.py  (+6 more)
