[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lydia"
version = "0.1.0"
description = "Lydia — a local AI coding agent powered by Ollama. No API keys required."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Levi Mackay" }]
keywords = ["ai", "agent", "cli", "ollama", "coding-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "pyfiglet>=1.0",
    "numpy>=1.26",
    "keyring>=25.0",
    "yfinance>=0.2",
    "feedparser>=6.0",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "msal>=1.30",
    "sounddevice>=0.4",
    "openwakeword>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Repository = "https://github.com/levibmackay/lydia-cli"

[project.scripts]
lydia = "lydia.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lydia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
